--- a/activities.html
+++ b/activities.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/activities.css" />
   </head>
   <body>
-    <div id="activityquestion"><b>What are we doing after?</b></div>
+    <div id="activityquestion"><b>What are we doing for our next date (Pick a date/Whenever we Have Money hehe)?</b></div>
     <div class="activities-selection">
       <div class="activity-item">
         <img src="activities/aquarium.jpeg" alt="aquarium" />
@@ -37,16 +37,6 @@
             name="activities"
             value="cinema"
           />cinema</label
-        >
-      </div>
-      <div class="activity-item">
-        <img src="activities/keramika.jpeg" alt="ceramics" />
-        <label
-          ><input
-            type="checkbox"
-            name="activities"
-            value="ceramics"
-          />ceramics</label
         >
       </div>
       <div class="activity-item">
